<resources>
    <string name="app_name">Buscam</string>
    <string name="mi_google_maps_api_key">AIzaSyDSgoNkyVMM_sK1sG9J5ovJNqgYG8xK-gI</string>

    <string name="default_web_client_id">97834713505-3lpsrvrvs5nnl1jeuctddal9pbs7uboe.apps.googleusercontent.com</string>
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Anuncios">Anuncios</string>
    <string name="Item_Buscar">Buscar</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_Perfil">Perfil</string>
    <string name="TituloRl">Título</string>
    <string name="Ingresar_email">Ingresa con Correo:</string>
    <string name="Ingresar_google">Ingresa con Google</string>
    <string name="Bienvenido">Bienvenido a Buscam</string>
    <string name="descripcion">Ingresa a buscam y encuentra todo lo que buscas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Txt_login_email">Correo electrónico</string>
    <string name="Txt_login_password">Contraseña</string>
    <string name="Txt_email">Ingresa tu correo</string>
    <string name="Txt_password">Ingresa tu contraseña</string>
    <string name="Btn_ingresar">Iniciar sesión</string>
    <string name="Txt_no_cuenta">¿No tienes una cuénta?</string>
    <string name="Txt_registrarme">Registrarse</string>
    <string name="Txt_registro">Empieza Ahora</string>
    <string name="Txt_r_password">Repetir Contraseña</string>
    <string name="Btn_registrar">Registrar</string>
    <string name="Txt_si_cuenta">¿Ya tienes una cuenta?</string>
    <string name="Txt_ingresar">Ingresar</string>
    <string name="Btn_cerrar_sesion">Cerrar sesión</string>
    <!--Perlfil de usuario-->
    <string name="Btn_editar_perfil">Editar Perfil</string>
    <string name="Btn_vender">Vender</string>
    <string name="Tv_nombres">Usuario</string>
    <string name="Txt_informacion">Información</string>
    <string name="Txt_email_info">Email: </string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="txt_nacimiento">Fecha de nacimiento: </string>
    <string name="Tv_nacimiento">dd/mm/aaaa</string>
    <string name="txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">dd/mm/aaaa</string>
    <string name="Txt_telefono">Teléfono: </string>
    <string name="Tv_telefono">999999999</string>
    <string name="Txt_estado_cuenta">Estado de cuenta:</string>
    <string name="Tv_estado_cuenta">No verificado</string>
    <string name="Txt_anuncios">Anuncios</string>
    <!-- Editar perfil usuario-->
    <string name="Txt_editar_p">Editar Perfil</string>
    <string name="Txt_nombres_c">Nombres Y Apellidos</string>
    <string name="Et_nombres">Ingresa aquí</string>
    <string name="Txt_f_nac">Fecha de nacimiento</string>
    <string name="Et_f_nac">Ingresa aquí</string>
    <string name="Et_telefono">Ingresa aquí</string>
    <string name="Btn_actualizar">Actualizar</string>
    <string name="Btn_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="Btn_eliminar_anuncios">Eliminar Anuncios</string>
    <string name="Txt_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="Txt_mensaje_eliminar">¿Estas segur@ que deseas eliminar esta cuenta? Esta acciòn no se puede deshacer</string>
    <string name="Btn_eliminar_mi_cuenta">Eliminar mi cuenta</string>

    <!--Item anuncio-->
    <string name="Tv_titulo">Nombre del producto</string>
    <string name="Tv_descripcion">Descripción del producto, se podrá visualizar un máximo de 3 líneas</string>
    <string name="Tv_direccion">Dirección</string>
    <string name="Tv_condicion">Nuevo</string>
    <string name="Tv_simbolo_precio">S/</string>
    <string name="Tv_precio">00</string>
    <string name="Tv_fecha">dd/MM/yyyy</string>

    <string name="Txt_detalle_info">Detalle del anuncio</string>
    <string name="Tv_cat">Categoría del anuncio</string>
    <string name="Txt_titulo">Titulo</string>
    <string name="Txt_descripcion">Descripción</string>
    <string name="Tv_descr">Descripción del anuncio</string>
    <string name="Txt_direccion">Dirección</string>
    <string name="Txt_vistas">Número de visitas del anuncio: </string>
    <string name="Tv_vistas">0</string>
    <string name="Txt_descr_vendedor">Descripción del vendedor</string>
    <string name="Txt_estado">Estado</string>
    <string name="Tv_estado">Disponible</string>
    <string name="Txt_miembro">Miembro desde:</string>
    <string name="Txt_categoria">Categoria del anuncio</string>


    <!--Opciones de detalle anuncio-->
    <string name="Btn_mapa">Mapa</string>
    <string name="Btn_llamar">Llam.</string>
    <string name="Btn_sms">SMS</string>
    <string name="Btn_chat">Chat</string>
    <string name="Btn_denuncia">Report</string>

    <string name="imagenContadorTv">1/4</string>

    <string name="Txt_perfil_vendedor">Perfil del Vendedor</string>
    <string name="Txt_anuncio">Anuncios publicados:</string>
    <string name="Tv_num_anuncios">0</string>
    <!-- Crear anuncio-->
    <string name="Et_marca">Nombre de la marca</string>
    <string name="Categoria">Categoria</string>
    <string name="Condicion">Condicion</string>
    <string name="Locacion">Locación</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Titulo</string>
    <string name="Et_descripcion">Descripción</string>
    <string name="Btn_crear_anuncio">Crear anuncio</string>

    <!-- Mapas -->
    <string name="Txt_select_ubicacion">Seleccione ubicación</string>
    <string name="Btn_listo">Listo</string>

    <!-- Fragmento Inicio -->
    <string name="Tv_locacion">Elija una locación</string>
    <string name="Et_buscar">Buscar </string>
    <string name="Tv_categoria">Categorias</string>

    <!-- Comentarios -->
    <string name="Txt_comentarios">Comentario</string>
    <string name="Txt_agregar">Agregar un comentario</string>
    <string name="Tv_nombres_comentario">Nombres</string>
    <string name="Tv_fecha_comentario">dd/MM/yyyy</string>
    <string name="Tv_comentario">Comentario del usuario</string>

    <string name="Et_agregar_comentario">Escriba un comentario</string>
    <string name="Btn_comentar">Comentar</string>

    <string name="Txt_olvide_pass">He olvidado mi contraseña</string>
    <string name="Tv_recuperar">Recuperar</string>

    <string name="Txt_olvide_password">Olvide mi contraseña</string>
    <string name="Txt_instrucciones">¿Olvidó su contraseña? Ingrese su correo electrónico registrado.
    Le enviaremos las instrucciones de recuperación</string>
    <string name="Et_email">Email</string>
    <string name="Btn_enviar_instrucciones">Enviar</string>

    <string name="Btn_cambiar_pass">Cambiar password</string>
    <string name="Txt_cambiar_pass">Cambiar Contraseña</string>
    <string name="Txt_instr_cambio_pass">Su nueva contraseña debe ser diferente a la actual</string>
    <string name="Et_password_actual">Contraseña actual</string>
    <string name="Et_password_nueva">Contraseña nueva</string>
    <string name="Et_password_nueva_r">Repetir contraseña</string>
    <string name="Btn_actualizar_pass">Actualizar</string>

    <string name="Btn_verificar_cuenta">Verificar Cuenta</string>

    <!-- Cuadro de diálogo eliminar Imagen-->
    <string name="Txt_eliminar">¿Estás seguro de eliminar la imagen?</string>
    <string name="Btn_si">Si</string>
    <string name="Btn_no">Cancelar</string>

    <!-- CD marcar Vendido -->
    <string name="Txt_marcar_vendido">¿Marcar como vendido el producto?</string>


    <!-- Chat -->
    <string name="Txt_nombre_vendedor_chat">Nombre del vendedor</string>
    <string name="Txt_estado_chat">Online</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>
    <string name="Btn_cerrar_visualizador">Cerrar</string>
</resources>