<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".Fragmentos.FragmentPerfil">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Iv_perfil"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:src="@drawable/perfil"
            android:scaleType="centerCrop"/>
            <!--android:background="@drawable/circle_bg"-->


        <TextView
            android:id="@+id/Tv_nombres"
            android:text="@string/Tv_nombres"
            android:layout_below="@+id/Iv_perfil"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--Editar Perfil-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_editar_perfil"
            android:text="@string/Btn_editar_perfil"
            android:layout_below="@+id/Tv_nombres"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/primary"
            app:icon="@drawable/ic_edit"
            android:layout_width="150dp"
            android:layout_height="@dimen/m_button_height"/>
        <!--Vender-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_vender"
            android:text="@string/Btn_vender"
            android:layout_below="@+id/Tv_nombres"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            app:icon="@drawable/ic_sell"
            android:layout_width="150dp"
            android:backgroundTint="@color/primary"
            android:layout_height="@dimen/m_button_height"/>
        <!--Informacion-->
        <TextView
            android:id="@+id/Txt_informacion"
            android:text="@string/Txt_informacion"
            android:layout_below="@+id/Btn_editar_perfil"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Email-->
        <TextView
            android:id="@+id/Txt_email"
            android:text="@string/Txt_email"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Tv_email"
            android:text="@string/Tv_email"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Fecha de nacimiento-->
        <TextView
            android:id="@+id/txt_nacimiento"
            android:text="@string/txt_nacimiento"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Tv_nacimiento"
            android:text="@string/Tv_nacimiento"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Miembro desde-->
        <TextView
            android:id="@+id/txt_miembro"
            android:text="@string/txt_miembro"
            android:layout_below="@+id/txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Tv_miembro"
            android:text="@string/Tv_miembro"
            android:layout_below="@+id/txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Teléfono-->
        <TextView
            android:id="@+id/Txt_telefono"
            android:text="@string/Txt_telefono"
            android:layout_below="@+id/txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Tv_telefono"
            android:text="@string/Tv_telefono"
            android:layout_below="@+id/txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Estado de la cuenta-->
        <TextView
            android:id="@+id/Txt_estado_cuenta"
            android:layout_below="@+id/Txt_telefono"
            android:text="@string/Txt_estado_cuenta"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Tv_estado_cuenta"
            android:text="@string/Tv_estado_cuenta"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TextAnuncios"
            android:text="@string/Txt_anuncios"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_below="@+id/Txt_estado_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_cerrar_sesion"
            android:text="@string/Btn_cerrar_sesion"
            android:layout_centerInParent="true"
            android:layout_below="@+id/TextAnuncios"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/m_button_height"/>

    </RelativeLayout>




</ScrollView>