<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones_login.Login_email">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:padding="30dp">
        <ImageView
            android:src="@drawable/login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"/>

        <!--Email-->
        <TextView
            android:text="@string/Txt_login_email"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp">
            <EditText
                android:id="@+id/Txt_email"
                android:hint="@string/Txt_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <TextView
            android:text="@string/Txt_login_password"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp">
            <EditText
                android:id="@+id/Txt_password"
                android:inputType="textPassword"
                android:hint="@string/Txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_ingresar"
            android:text="@string/Btn_ingresar"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/primary"
            android:layout_width="180dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="@dimen/m_button_height"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_gravity="center">
            <TextView
                android:text="@string/Txt_no_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Txt_registrarme"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginStart="10dp"
                android:text="@string/Txt_registrarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>