<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_email">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">
        <TextView
            android:text="@string/Txt_registro"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp">
            <EditText
                android:id="@+id/Txt_email"
                android:hint="@string/Txt_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp">
            <EditText
                android:id="@+id/Txt_password"
                android:hint="@string/Txt_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Repetir password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp">
            <EditText
                android:id="@+id/Txt_r_password"
                android:hint="@string/Txt_r_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_registrar"
            android:layout_width="180dp"
            android:textSize="18sp"
            android:text="@string/Btn_registrar"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/primary"
            android:layout_height="@dimen/m_button_height"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_gravity="center">
            <TextView
                android:text="@string/Txt_si_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Txt_ingresar"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginStart="10dp"
                android:text="@string/Txt_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>