<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Txt_editar_p"
            android:text="@string/Txt_editar_p"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--Imagen de Perfil-->
        <RelativeLayout
            android:id="@+id/perfilRl"
            android:layout_width="135dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/Txt_editar_p"
            android:layout_height="135dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_perfil"
                android:src="@drawable/perfil"
                android:scaleType="centerCrop"
                android:layout_width="120dp"
                android:layout_height="120dp"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_alignParentEnd="true"
                app:fabSize="mini"
                android:src="@drawable/ic_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <!--Editar Nombres Y APELLIDOS-->
        <RelativeLayout
            android:id="@+id/Txt_nombres_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/perfilRl">
            <TextView
                android:text="@string/Txt_nombres_c"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">
                <EditText
                    android:id="@+id/Et_nombres"
                    android:hint="@string/Et_nombres"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
        <!--Fecha de nacimiento-->
        <RelativeLayout
            android:id="@+id/Txt_f_nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/Txt_nombres_c">
            <TextView
                android:text="@string/Txt_f_nac"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Nac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">
                <EditText
                    android:id="@+id/Et_f_nac"
                    android:hint="@string/Et_f_nac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
        <!--Telefono-->
        <RelativeLayout
            android:id="@+id/Rl_Cod_Tel"
            android:layout_below="@id/Txt_f_nac"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Txt_telefono"
                android:text="@string/Txt_telefono"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"/>
            <com.hbb20.CountryCodePicker
                android:id="@+id/selectorCod"
                android:gravity="center"
                android:layout_below="@+id/Txt_telefono"
                app:ccp_autoDetectCountry="true"
                android:layout_marginTop="18dp"
                app:ccp_rememberLastSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--Número Telefonico-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/selectorCod"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">
                <EditText
                    android:id="@+id/Et_telefono"
                    android:inputType="number"
                    android:hint="@string/Et_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
        <!--Actualizar-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_actualizar"
            android:layout_centerInParent="true"
            android:text="@string/Btn_actualizar"
            android:layout_marginTop="17dp"
            app:icon="@drawable/ic_edit"
            android:backgroundTint="@color/primary"
            android:layout_below="@+id/Rl_Cod_Tel"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"/>
    </RelativeLayout>

</RelativeLayout>